--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -6,4 +6,48 @@
 
 body{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}  
+
+ul{
+  list-style: none;
+}
+img{
+  max-width: 100%;
+}
+
+/* utilities */
+.debug{
+  border: 1px solid black;
+  background-color: burlywood;
+}
+.flex-box{
+  display: flex;
+}
+
+/* /utilities */
+
+
+.header-top{
+  padding: 30px 0;
+}
+
+.row.flex-box{
+  justify-content: space-between;
+}
+.column.flex-box{
+  max-width: 500px;
+
+}
+.header-bottom{
+  height: 740px;
+  padding-top: 100px;
+}
+
+.jumbotron{
+  max-width: 1190px;
+  margin: 0 auto;
+
+}
+.jumbo-left{
+  max-width: 360px;
 }
