--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -74,3 +74,23 @@ img{
   text-align: center;
 }
 
+section:nth-child(2){
+  padding-top: 140px;
+}
+
+.partner{
+  padding-top: 60px;
+  margin-left: 55px;
+  max-width: 300px;
+}
+
+.image{
+  max-width: 600px;
+}
+
+.card-feature{
+  max-width: 300px;
+  padding: 0 25px;
+  margin: 0 auto;
+}
+
