--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -18,6 +18,7 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
 
 ul{
   list-style: none;
+  padding: 0;
 }
 
 a{
@@ -61,18 +62,16 @@ h2{
 }
 
 .header-top li{
-padding: 25px 15px;
+  padding: 25px 15px;
+  height: 80px;
 }
 
 .header-top li a{
   color: black;
 
 }
-.header-top li .top-link{
-  padding: 35px 0;
-}
 
-.header-top li:hover .top-link{
+.header-top li.top-link:hover{
   border-bottom: 3px solid black;
 }
 
