--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -11,7 +11,6 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
 /* custom-properties */
 :root{
   --first-color: #0061ff;
-  --second-color: #f0f0f0;
 }
 
 
@@ -44,7 +43,7 @@ h3{
 }
 
 h4{
-  padding-top: 30px;
+  font-size: 16px;
 }
 h6{
   padding: 12px 0;
@@ -67,10 +66,6 @@ h6{
 
 /* header-top */
 
-.header-top{
-  background-color: var(--second-color);
-}
-
 .row.flex-box{
   justify-content: space-between;
 }
@@ -78,11 +73,13 @@ h6{
 .header-top li{
   padding: 25px 15px;
   height: 80px;
+
 }
 
 
 .header-top li.top-link:hover{
   border-bottom: 3px solid black;
+  cursor: pointer;
 }
 
 
@@ -101,7 +98,7 @@ h6{
 }
 
 .jumbotron{
-  max-width: 1190px;
+  max-width: 1200px;
   margin: 0 auto;
 
 }
@@ -119,15 +116,14 @@ h6{
 .jumbo-right img{
   margin-top: 30px;
 }
-
+/* /header-bottom */
 /* /header */
 
 /* main */
 
 .container-main{
   max-width: 1030px;
-  margin: 0 auto;
-  margin-top: 130px;
+  margin: 130px auto;
 }
 .fatturazione span::before{
   content: '';
@@ -159,16 +155,16 @@ h6{
 .container.card{
   max-width: 300px;
 }
-.container.card div{
-  padding: 0 30px;
-}
-
-.card h3{
-  padding: 20px 0;
+.container div{
+  padding:0  30px;
+  padding-top: 30px;
 }
 
 .container{
   border: 1px groove black;
+  margin-top: 30px;
+  font-size: 14px;
+  
 }
 
 .container h6{
@@ -177,10 +173,13 @@ h6{
 }
 .card ul{
   --icon-space: 1.3em;
-  padding: 30px 0; 
+  padding: 20px 0; 
 }
-.card p:nth-last-of-type(1){
+.container p:nth-last-of-type(1){
   padding-top: 30px;
+}
+.plans .container:nth-last-of-type(1){
+  padding-bottom: 30px;
 }
 
 
@@ -208,6 +207,13 @@ h6{
   content: "\f00c";
   color: var(--first-color);
 }
+.card ul li.users::before{
+  content: "\f0c0";
+}
+.cta{
+  color: blue;
+  text-decoration: underline;
+}
 
 .line{
   display:inline-block;
@@ -218,8 +224,10 @@ h6{
 
 /* /cards */
 
+/* partner */
+
 section:nth-child(2){
-  padding-top: 140px;
+  padding-top: 130px;
 }
 
 .partner{
@@ -227,28 +235,57 @@ section:nth-child(2){
   margin-left: 55px;
   max-width: 300px;
 }
+.partner p{
+  padding: 40px 0;
+}
+.partner .button{
+  background-color: var(--second-color);
+  color: black;
+  border: 2px solid black;
+}
+
 
 .image{
   max-width: 600px;
+  max-height: 518px;
 }
+
+/* /partner */
+
+/* features */
 
 .card-feature{
   max-width: 300px;
-  padding: 0 25px;
   margin: 0 auto;
 }
+
+.features h2{
+  padding-top: 130px;
+  padding-bottom: 60px;
+}
+
+.features h3{
+  padding-bottom: 20px;
+}
+
+/* / features */
 
 /* /main */
 
 /* footer */
 footer{
   padding: 100px 0;
+  background-color: black;
 }
-.navbar{
-  max-width: 1200px;
-  margin: 0 auto;
+footer .jumbotron{
+  color: white;
 }
-
+footer ul{
+  padding: 30px 0;
+}
+footer li{
+  padding-bottom: 10px;
+}
 
 footer .flex-box{
   justify-content: space-between;
@@ -258,4 +295,8 @@ footer .flex-box{
 footer .flex-box nav{
   max-width: 200px;
 
+}
+footer .line{
+  width: 125px;
+  border-bottom: 2px solid white;
 }
