--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 
 body{
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -30,7 +33,7 @@ img{
 }
 
 h1{
-  font-size: 80px;
+  font-size: 82px;
   font-weight: 900;
 }
 h2{
@@ -93,7 +96,7 @@ h6{
 /* header-bottom */
 .header-bottom{
   padding-top: 100px;
-  max-height: 760px;
+  max-height: 740px;
   background-color: #b4d0e7;
 }
 
@@ -104,6 +107,15 @@ h6{
 }
 .jumbo-left{
   max-width: 360px;
+  position: relative;
+}
+.anchor{
+  position: absolute;
+  bottom: 120px;
+  left: 0;
+}
+.anchor i{
+  font-size: 50px;
 }
 
 .content{
@@ -122,7 +134,7 @@ h6{
 /* main */
 
 .container-main{
-  max-width: 1030px;
+  max-width: 1032px;
   margin: 130px auto;
 }
 .fatturazione span::before{
@@ -148,13 +160,15 @@ h6{
   padding-right: 60px;
 }
 .plans{
-  padding-top: 50px;
+  padding-top: 25px;
 }
 
 /* cards */
 .container.card{
-  max-width: 300px;
+  width: calc(100%/3);
+
 }
+
 .container div{
   padding:0  30px;
   padding-top: 30px;
@@ -162,9 +176,19 @@ h6{
 
 .container{
   border: 1px groove black;
-  margin-top: 30px;
-  font-size: 14px;
+  margin: 0 15px;
+  margin-top: 50px;
+  font-size: 15px;
   
+  
+}
+
+.price{
+  font-weight: 700;
+  padding: 15px 0;
+}
+.frequency{
+  color: #6f6f6f;
 }
 
 .container h6{
@@ -227,7 +251,10 @@ h6{
 /* partner */
 
 section:nth-child(2){
+  padding: 0 15px;
   padding-top: 130px;
+  
+  
 }
 
 .partner{
@@ -254,6 +281,10 @@ section:nth-child(2){
 
 /* features */
 
+section:nth-child(3){
+  padding: 0 15px;
+}
+
 .card-feature{
   max-width: 300px;
   margin: 0 auto;
@@ -279,12 +310,22 @@ footer{
 }
 footer .jumbotron{
   color: white;
+  padding: 0 50px;
 }
 footer ul{
   padding: 30px 0;
 }
 footer li{
   padding-bottom: 10px;
+}
+footer li a{
+  font-size: 14px;
+  color: white;
+}
+
+footer li a:hover{
+  color: darkgray;
+  text-decoration: underline;
 }
 
 footer .flex-box{
@@ -299,4 +340,28 @@ footer .flex-box nav{
 footer .line{
   width: 125px;
   border-bottom: 2px solid white;
+  display: block;
+}
+footer .language::before{
+  padding-top: 40px;
+  content: "\f57d";
+  font-family: FontAwesome;
+  padding-right: 5px;
+  display: inline-block;
+  color: darkgray;
+
+}
+footer .language{
+  color: darkgray;
+  font-size: 15px;
+}
+
+
+footer .language::after{
+  content: "\f0d8";
+  font-family: FontAwesome;
+  display: inline-block;
+  color: darkgray;
+  padding-left: 2px;
+  font-size: 10px;
 }
